# rust-stubdns

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: stubdns.json
src/: config.rs  listen.rs  main.rs  pool.rs  query.rs  utils.rs
src/connection/: connection.rs  connection_manager.rs  connection_pool.rs  connection_watchdog.rs  mod.rs
