[package]
name = "stubdns"
version = "0.1.1"
edition = "2024"
description = "DNS stub resolver"
license = "MIT"
authors = ["WatchDG <baranov@w3m.co>"]
repository = "https://github.com/WatchDG/rust-dnsio"
keywords = ["dns", "resolver", "stub", "protocol", "network"]
categories = ["network-programming"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros"] }
# dnsio = "0.1.1"
dnsio = { git = "https://github.com/WatchDG/rust-dnsio.git", branch = "feature/next" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
rustls = { version = "0.23", default-features = false, features = ["std", "aws_lc_rs", "prefer-post-quantum"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs"] }
rustls-native-certs = "0.7"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Better optimization
strip = true         # Strip symbols
